--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-rgb: 255, 255, 255;
+  --background-rgb: 235, 235, 235;
 }
 
 /*
@@ -20,10 +20,15 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+  width: 100vw;
+  height: 100vh;
 }
+
+
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
+
